# house-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/workflows/: live-check.yml  tests.yml
house_monitor/: __init__.py  config.py  email_notifier.py  fetch.py  logging_setup.py  main.py  models.py  monitor.py
house_monitor/scrapers/: __init__.py  bazar.py  derstandard.py  dibeo.py  dingdong.py  findheim.py  findmyhome.py  goldgrube.py  immi.py  immobilien_de.py  immobilien_net.py  immodirekt.py  immokralle.py  immolive24.py  immoscout24.py  ohne_makler.py  raiffeisen.py  sonnberger.py  willhaben.py  wohnnet.py
scripts/: __init__.py  live_smoke_check.py
tests/: test_house_monitor.py
