[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "house-monitor"
version = "1.0.0"
description = "Asyncio scraper that watches Austrian real-estate sites for cheap houses and emails a summary of new/cheaper listings"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David Afra" }]
dependencies = ["aiohttp==3.9.1", "aiofiles==25.1.0", "beautifulsoup4==4.15.0", "lxml==6.1.1"]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "black==26.5.1",
    "ruff==0.15.22",
    "mypy==2.1.0",
    "types-beautifulsoup4==4.12.0.20250516",
]

[project.urls]
Repository = "https://github.com/griffffffin/house-monitor"

[project.scripts]
house-monitor = "house_monitor.main:main"

[tool.setuptools.packages.find]
include = ["house_monitor*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# BeautifulSoup's Tag.get()/.find() return broad unions (str | list[str] | None,
# Tag | NavigableString | None) that don't reflect that a given HTML attribute
# (e.g. href) is always a single string in practice. Narrowing every call site
# across 19 near-identical scrapers would add defensive casts for a case that
# can't actually happen, without any real safety benefit. Real bugs (wrong
# types on Listing fields, missing Optional, etc.) still surface normally.
module = "house_monitor.scrapers.*"
disable_error_code = ["union-attr", "index", "operator", "call-arg", "arg-type", "assignment"]
